--- a/MultiRocket-4/style.css
+++ b/MultiRocket-4/style.css
@@ -8,24 +8,35 @@ html {
     /* overflow: hidden; */
 }
 
+#section2{
+    background-image: url(/Pin-on-Super-gif.gif);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 button {
     position: relative;
-    background: #eee;
-    width: 150px;
-    height: 50px;
+    background: transparent;
+    width: 8%;
+    height: 8%;
     flex: 1 1 auto;
+    color: whitesmoke;
     text-align: center;
     transition: 0.5s;
     background-size: 200% auto;
-    border-radius: .8em;
+    border: whitesmoke;
+    border-style: solid;
+    border-radius: .9em;
     padding: 8px 15px;
     z-index: 99;
-    top: -8vh;
-    left: 90%;
+    top: -13vh;
+    left: 85%;
 }
 
 button:hover {
-    background: #bbb;
+    border: whitesmoke;
+    border-style: solid;
+
 }
 
 .p1 {
@@ -42,7 +53,7 @@ button:hover {
 /* width */
 
  ::-webkit-scrollbar {
-    width: 10px;
+    width: 0px;
 }
 
 
@@ -70,7 +81,7 @@ body {
 .header {
     font-family: 'Skranji', cursive;
     text-align: center;
-    margin-top: 0%;
+    margin-top: 3%;
     margin-bottom: 3%;
     color: #e0dfdc;
     font-size: 3rem;
@@ -81,8 +92,9 @@ body {
 .swiper-container {
     width: 100%;
     height: 100%;
+
     transition: 1s;
-    margin-top: 0px;
+    margin-top: 5%;
 }
 
 .swiper-slide {
@@ -232,8 +244,8 @@ body {
 .dot41,
 .dot71 {
     cursor: pointer;
-    height: 20px;
-    width: 20px;
+    height: 10px;
+    width: 10px;
     margin: 0 5px;
     background-color: #bbb;
     border-radius: 50%;
@@ -259,7 +271,7 @@ body {
     margin: 0;
     width: 50%;
     left: 50%;
-    top: 42%;
+    top: 30%;
     line-height: 200%;
     font-size: 1.3rem;
 }
