--- a/MultiRocket-4/style.css
+++ b/MultiRocket-4/style.css
@@ -4,7 +4,7 @@
 }
 
 html {
-    height: 100%;
+    height: 100vh;
     /* overflow: hidden; */
 }
 
@@ -80,7 +80,7 @@ body {
 
 .swiper-container {
     width: 100%;
-    height: 100%;
+    height: 105%;
     transition: 1s;
     margin-top: 0px;
 }
@@ -117,8 +117,8 @@ body {
 
 .swiper-pagination,
 .swiper-pagination2 {
-    position: relative;
-    bottom: 0 !important;
+    position: relative !important;
+    bottom: 25% !important;
     right: 0 !important;
     left: 0 !important;
 }
