--- a/MultiRocket-4/style.css
+++ b/MultiRocket-4/style.css
@@ -7,25 +7,37 @@ html {
     height: 100vh;
     /* overflow: hidden; */
 }
-
+#section2{
+    background-image: url(/Pin-on-Super-gif.gif);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 button {
     position: relative;
-    background: #eee;
-    width: 150px;
-    height: 50px;
+    background: transparent;
+    width: 8%;
+    height: 8%;
     flex: 1 1 auto;
+    color: whitesmoke;
     text-align: center;
     transition: 0.5s;
     background-size: 200% auto;
-    border-radius: .8em;
+    border: whitesmoke;
+    border-style: solid;
+    border-radius: .9em;
     padding: 8px 15px;
     z-index: 99;
-    top: -8vh;
-    left: 90%;
+    top: -10vh;
+    left: 70%;
+    font-family: 'Goldman', cursive;
+    font-size: 1.2em;
 }
 
 button:hover {
-    background: #bbb;
+    border: whitesmoke;
+    border-style: solid;
+    font-family: 'Goldman', cursive;
+
 }
 
 .p1 {
@@ -227,8 +239,8 @@ body {
 .dot41,
 .dot71 {
     cursor: pointer;
-    height: 20px;
-    width: 20px;
+    height: 10px;
+    width: 10px;
     margin: 0 5px;
     background-color: #bbb;
     border-radius: 50%;
