--- a/MultiRocket-4/style.css
+++ b/MultiRocket-4/style.css
@@ -8,7 +8,7 @@ html {
     /* overflow: hidden; */
 }
 #section2{
-    background-image: url(/Pin-on-Super-gif.gif);
+    background-image: url(/image/Pin-on-Super-gif.gif);
     background-repeat: no-repeat;
     background-size: cover;
 }
