--- a/MultiRocket-4/style.css
+++ b/MultiRocket-4/style.css
@@ -982,7 +982,7 @@ h1 {}
 .login {
     display: -webkit-box;
     display: flex;
-    width: 100%;
+    width: 50%;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     flex-direction: column;
@@ -1185,6 +1185,7 @@ h1 {}
     display: flex;
     width: 100%;
     flex-wrap: wrap;
+
 }
 
 .login .login__inner .login__content .login__form {
@@ -1194,7 +1195,9 @@ h1 {}
     -webkit-box-pack: center;
     justify-content: center;
 }
-
+.login__form{
+    text-align: center;
+}
 .login .login__inner .login__content .login__form .form {
     display: -webkit-box;
     display: flex;
@@ -1227,16 +1230,18 @@ h1 {}
     display: -webkit-box;
     display: flex;
     width: 100%;
-    padding: 5% 0%;
+    text-align: center;
+    padding: 7% 0%;
     padding-bottom: 2%;
     background: transparent;
-    font-size: 1.35rem;
+    font-size: 2rem;
     letter-spacing: .125rem;
     color: #fff;
     border: none;
     outline: none;
     box-shadow: none;
     border-bottom: 0.1rem solid rgba(255, 255, 255, 0.3);
+    font-family: 'Source Code Pro', monospace;
 }
 
 .login .login__inner .login__content .login__form .form .form__group .form__input:focus+.form__input-after {
@@ -1245,7 +1250,7 @@ h1 {}
 
 .login .login__inner .login__content .login__form .form .form__group .form__input:focus~.form__label,
 .login .login__inner .login__content .login__form .form .form__group .form__input:valid~.form__label {
-    /* transition weight*/
+    /* transition weight ให้มันขึ้นไปข้างบน*/
     -webkit-transform: translate3d(0rem, -1rem, 0);
     transform: translate3d(0rem, -1rem, 0);
     font-size: 1.35rem;
@@ -1270,6 +1275,8 @@ h1 {}
     width: 0;
     height: .1rem;
     background-color: #fff;
+
+
     -webkit-transition: 0.25s cubic-bezier(0.694, 0.048, 0.335, 1) all;
     transition: 0.25s cubic-bezier(0.694, 0.048, 0.335, 1) all;
 }
@@ -1278,97 +1285,28 @@ h1 {}
     /* label weight ตอนยังไม่กรอก นน */
     position: absolute;
     top: 0;
+    width: 100%;
     left: 0;
     display: -webkit-box;
     display: flex;
-    width: 100%;
+    text-align: center;
     font-size: 1.35rem;
+    margin-left: 40%;
     -webkit-transform: translate3d(0rem, 1rem, 0);
     transform: translate3d(0rem, 1rem, 0);
     will-change: transform;
     -webkit-transform-style: preserve-3d;
     transform-style: preserve-3d;
-    -webkit-transition: 0.25s cubic-bezier(0.694, 0.048, 0.335, 1) all;
-    transition: 0.25s cubic-bezier(0.694, 0.048, 0.335, 1) all;
+    /**-webkit-transition: 0.25s cubic-bezier(0.694, 0.048, 0.335, 1) all;
+    transition: 0.25s cubic-bezier(0.694, 0.048, 0.335, 1) all;**/
     pointer-events: none;
 }
 
-.login .login__inner .login__content .login__form .form .form__group .form__btn {
-    position: relative;
-    display: -webkit-box;
-    display: flex;
-    width: 100%;
-    -webkit-box-pack: center;
-    justify-content: center;
-    padding: 2rem 4rem;
-    cursor: pointer;
-    border: 0.1rem solid #fff;
-    border-radius: .25rem;
-    background: transparent;
-    box-shadow: none;
-    outline: none;
-    text-transform: uppercase;
-    -webkit-transition: 0.25s cubic-bezier(0.694, 0.048, 0.335, 1) all;
-    transition: 0.25s cubic-bezier(0.694, 0.048, 0.335, 1) all;
-}
 
-.login .login__inner .login__content .login__form .form .form__group .form__btn::after {
-    content: " ";
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: -webkit-box;
-    display: flex;
-    width: 0;
-    height: 100%;
-    background-color: #fff;
-    -webkit-transition: 0.25s cubic-bezier(0.694, 0.048, 0.335, 1) all;
-    transition: 0.25s cubic-bezier(0.694, 0.048, 0.335, 1) all;
-}
 
-.login .login__inner .login__content .login__form .form .form__group .form__btn:hover {
-    color: #2F3545;
-}
 
-.login .login__inner .login__content .login__form .form .form__group .form__btn:hover::after {
-    width: 100%;
-}
 
-.login .login__inner .login__content .login__form .form .form__group .form__btn:hover .form__btn-text {
-    color: #2F3545;
-    -webkit-transition: 0.25s cubic-bezier(0.694, 0.048, 0.335, 1) all;
-    transition: 0.25s cubic-bezier(0.694, 0.048, 0.335, 1) all;
-}
 
-.login .login__inner .login__content .login__form .form .form__group .form__btn .form__btn-text {
-    position: relative;
-    z-index: 99;
-    font-size: 1rem;
-    letter-spacing: .25rem;
-    color: #fff;
-}
-
-.login .login__inner .login__footer {
-    display: -webkit-box;
-    display: flex;
-    width: 100%;
-    margin-top: 2.5rem;
-}
-
-.login .login__inner .login__footer .login__subtitle {
-    display: -webkit-box;
-    display: flex;
-    width: 100%;
-    -webkit-box-pack: center;
-    justify-content: center;
-}
-
-.login .login__inner .login__footer .login__subtitle h3.login__subheading {
-    font-size: 1.9rem;
-    font-weight: 200;
-    margin: 5rem 0 2.5rem 0;
-    color: rgba(255, 255, 255, 0.3);
-}
 
 
 /* 768px */
