แก้ font-size text

--- a/MultiRocket-4/style.css
+++ b/MultiRocket-4/style.css
@@ -75,6 +75,10 @@ button:hover {
     height: var(--p2_H);
 }
 
+.showtext p {
+    font-size: 20px;
+}
+
 
 /* width */
 
@@ -297,7 +301,7 @@ body {
 }
 
 .showtext :hover {
-    font-size: 1.5rem;
+    font-size: 25px;
 }
 
 .prev,
