--- a/Arc/style.css
+++ b/Arc/style.css
@@ -307,6 +307,49 @@ html {
 
 /* หน้า Home*/
 
+/* หน้า law */
+/* กฎหมายการเลือกตั้ง*/
+#law_vdo1{
+    position: fixed;
+    top: 40.245370370370374vh;
+    left: 12.138020833333332vw;
+}
+
+#law_topic1{
+    position: sticky;
+    top: 26.033333333333335vh;
+    left: 36.5625vw;
+}
+#law_text1{
+    position: sticky;
+    top: 36.541666666666664vh;
+    left: 17.864583333333332vw;
+    bottom: 8.981481481481481vh
+}
+/* กฎหมายการเลือกตั้ง*/
+
+/* กฎหมายการลาคลอด*/
+#law_vdo2{
+    position: fixed;
+    top: 17.26388888888889vh;
+    left: 15vw;
+
+}
+
+#law_topic2{
+    position: sticky;
+    top: 20.52685185185185vh;
+    left: 28.51979166666667vw;
+    bottom: 3.888888888888889vh;
+}
+#law_text2{
+    position: sticky;
+    top: 34.541666666666664vh;
+    left: 17.864583333333332vw;
+    bottom: 8.981481481481481vh;
+}
+/* กฎหมายการลาคลอด*/
+/* หน้า law */
 
 /* หน้า Draf law */
 
