--- a/Arc/style.css
+++ b/Arc/style.css
@@ -359,11 +359,14 @@ html {
 }
 .vdo2{
     margin-left: 0vw;
-    top:15.423133235724745vw;
+    top:380.27px;
+    width: 1016px;
+    height: 630px;
 }
 .vdo3{
     left: 10.27745241581259vw;
     top: 11.978038067349927vw;
+
 }
 .vdo4{
     margin-left: 0vw;
